--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "acquia/lightning_dev",
+    "name": "christophe-hubert/lightning_dev",
     "description": "Internal development tools for Acquia Lightning.",
     "type": "drupal-module",
     "license": "GPL-2.0+",
