--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "symfony/debug": "^3.4.0",
         "drupal/drupal-extension": "^3.4.0",
         "behat/behat": "^3.0",
-        "squizlabs/php_codesniffer": "2.*",
+        "squizlabs/php_codesniffer": "^3.0",
         "se/selenium-server-standalone": "^2.53",
         "drupal/devel": "^2.0",
         "drush/drush": "^9.4",
