--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "christophe-hubert/lightning_dev",
+    "name": "acquia/lightning_dev",
     "description": "Internal development tools for Acquia Lightning.",
     "type": "drupal-module",
     "license": "GPL-2.0+",
@@ -19,9 +19,9 @@
         "symfony/debug": "^3.4.0",
         "drupal/drupal-extension": "^3.4.0",
         "behat/behat": "^3.0",
-        "squizlabs/php_codesniffer": "^3.0",
+        "squizlabs/php_codesniffer": "2.*",
         "se/selenium-server-standalone": "^2.53",
-        "drupal/devel": "^2.0",
+        "drupal/devel": "^1.0",
         "drush/drush": "^9.4",
         "consolidation/robo": "^1.2",
         "drupal/console": "^1.8",
